<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageViewMondai"
        android:layout_width="324dip"
        android:layout_height="96dip"
        android:src="@drawable/mondai"
        android:contentDescription="@string/mondai">
    </ImageView>
    <ImageView
        android:id="@+id/imageViewImg"
        android:layout_width="320dip"
        android:layout_height="320dip"
        android:layout_marginTop="16dip"
        android:contentDescription="@string/img">
    </ImageView>
    <ImageView
        android:id="@+id/imageViewAnswerBtn"
        android:layout_width="208dip"
        android:layout_height="76dip"
        android:layout_marginTop="16dip"
        android:src="@drawable/answerbtn"
        android:contentDescription="@string/answerbtn">
    </ImageView>

</LinearLayout>
