<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageViewMessage"
        android:layout_width="194dp"
        android:layout_height="72dp"
        android:contentDescription="@string/message">
    </ImageView>
    <ImageView
        android:id="@+id/imageViewImg"
        android:layout_width="390dp"
        android:layout_height="144dp"
        android:layout_marginTop="16dip"
        android:contentDescription="@string/img"
        android:layout_weight="0.31">
    </ImageView>
    <TextView
        android:id="@+id/textViewAns"
        android:layout_width="286dp"
        android:layout_height="98dp"
        android:layout_marginTop="8dip"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@android:color/darker_gray">
    </TextView>
    <ImageView
        android:id="@+id/imageViewListenBtn"
        android:layout_width="208dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dip"
        android:src="@drawable/listenbtn"
        android:contentDescription="@string/listenbtn"
        android:layout_weight="0.23">
    </ImageView>
    <ImageView
        android:id="@+id/imageViewRePlayBtn"
        android:layout_width="208dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dip"
        android:src="@drawable/replaybtn"
        android:contentDescription="@string/playbtn"
        android:layout_weight="0.15">
    </ImageView>

</LinearLayout>
